Bug 415893 - Loaded Sage worksheet don't work
Summary: Loaded Sage worksheet don't work
Status: RESOLVED FIXED
Alias: None
Product: cantor
Classification: Applications
Component: sage-backend (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR major
Target Milestone: ---
Assignee: Cantor Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-01-05 12:53 UTC by Nikita Sirgienko
Modified: 2020-02-19 19:10 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 19.12.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nikita Sirgienko 2020-01-05 12:53:15 UTC
SUMMARY
Can't run code cells in loaded sage worksheet

STEPS TO REPRODUCE
1. Create sage worksheet and test, that it works
2. Save the worksheet
3. Load the worksheet
4. Check, that you can't run any entry (well, you can run, but the entry is never finished)
Comment 1 Nikita Sirgienko 2020-02-19 19:10:15 UTC
Git commit 83575703c3170f8be58b809b419ae52789839335 by Nikita Sirgienko.
Committed on 19/02/2020 at 19:09.
Pushed by sirgienko into branch 'release/19.12'.

[Sage] Fix bug with unworking loaded worksheets
FIXED-IN: 19.12.3

M  +10   -5    src/backends/sage/sagesession.cpp
M  +1    -0    src/backends/sage/sagesession.h

https://invent.kde.org/kde/cantor/commit/83575703c3170f8be58b809b419ae52789839335