[Sage] Fix bug with unworking loaded worksheets

BUG: 415893
FIXED-IN: 19.12.3